Moved species section in the intro to a section associated with species outputs - in part - becuase the scope of the RR keeps expanding and the emphasis is now beyond species.

--- a/app/templates/EN/species/NSARP_dist_crithab.Rmd
+++ b/app/templates/EN/species/NSARP_dist_crithab.Rmd
@@ -1,3 +1,11 @@
+# **SEARCH RESULTS: SPECIES FOCUS**
+
+This module describes outputs of species derived from a variety of data sources, internal and external to DFO. Species that have been listed under the Species at Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), are summarized in independent tables. Area-specific outputs are provided in sub-sections labelled according to each data source. Data descriptions, references and contact information are provided at the beginning of each sub-section. The following are definitions relevant for species listed by the Species at Risk Act (SARA) or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC).
+
+- SARA - The following text was obtained from the SARA website (URL below). The Species at Risk Act (SARA) was proclaimed in June 2003; it is one part of a three-part Government of Canada strategy for the protection of wildlife Species At Risk. This three-part strategy also includes commitments under the Accord for the Protection of Species At Risk and activities under the Habitat Stewardship Program for Species At Risk. The purposes of SARA are to prevent Canadian indigenous species, subspecies, and distinct populations from becoming extirpated or extinct, to provide for the recovery of endangered or threatened species, and encourage the management of other species to prevent them from becoming at risk. It applies to all federal lands in Canada; all wildlife species listed as being at risk; and their critical habitat. For more information on SARA visit https://www.canada.ca/en/environment-climate-change/services/species-risk-public-registry.html
+
+- COSEWIC - The following text was obtained from the COSEWIC website (URL below): The Committee on the Status of Endangered Wildlife in Canada (COSEWIC) is an independent advisory panel to the Minister of Environment and Climate Change Canada that meets twice a year to assess the status of wildlife Species At Risk of extinction. Members are wildlife biology experts from academia, government, non-governmental organizations and the private sector responsible for designating wildlife species in danger of disappearing from Canada. COSEWIC determines the national status of wild Canadian species, subspecies, varieties or other designatable units that are suspected of being at risk of extinction or extirpation. COSEWIC uses a process based on science and Aboriginal or community knowledge to assess wildlife Species At Risk. All native mammals, birds, reptiles, amphibians, fish, arthropods, molluscs, vascular plants, mosses and lichens are included in COSEWIC’s current mandate. For more information on COSEWIC visit https://www.cosewic.ca/index.php/en-ca/
+
 ## **SPECIES AT RISK DISTRIBUTION & CRITICAL HABITAT DATA: SARA GEODATABASE**    
 **Contact:** Carolyn.Bakelaar@dfo-mpo.gc.ca  
 **Internal GIS Tool URL:** <http://dfonl7swvgip001.ent.dfo-mpo.ca/Html5Viewer/index.html?viewer=NationalSARMap_EN&LayerTheme=0&locale=en-US#>  
