--- a/reports/sections/pasBay/pasBay_en.Rmd
+++ b/reports/sections/pasBay/pasBay_en.Rmd
@@ -32,7 +32,7 @@ Dataset description from the Open Data record [@OpenData_pasBay]:
 writeLines(noquote(pasBay_rr$text$en))
 ```
 
-#### ***Area-specific search results for the Passamaquoddy Bay Biodiversity Trawls***
+##### *Area-specific search results for the Passamaquoddy Bay Biodiversity Trawls*
 
 ```{r pasBay-results, include=FALSE, cache=FALSE}
 pasBayClipped <- master_intersect(pasBay_rr$data_sf, mapDataList)
