--- a/reports/sections/sturg/sturg_en.Rmd
+++ b/reports/sections/sturg/sturg_en.Rmd
@@ -17,7 +17,7 @@ if (FALSE) { #load in data:
 }
 ```
 
-### **Atlantic Sturgeon Foraging Areas in the Upper Bay of Fundy ** {#sturg-section}
+### **Atlantic Sturgeon Foraging Areas in the Upper Bay of Fundy** {#sturg-section}
 ```{r sturg-load, include=FALSE}
 load_rdata(c("sturg_rr"), "MAR", env = environment())
 ```
@@ -28,7 +28,7 @@ write_meta(sturg_rr, "EN")
 
 Areas in the Minas Basin were selected for spatial analysis to examine foraging grounds for Atlantic Sturgeon, through a combination of using UAV’s, a novel approach to geoscience, with bottom sediment grain-size collection. Temporal studies will be carried out in the southern bight of Minas Basin at the Kingsport tidal-channel-flat complex to understand and document temporal morphodynamics. The Kingsport area will be studied as these tidal flats are used extensively by Atlantic Sturgeon for foraging from June to September and a large data set of grain size exists that can be used to help validate morphodynamic models. Ultimately this project will be used to predict future change to the tidal flats of the Minas Basin if a large scale tidal project such as the one proposed for Minas Channel is approved and to help understand Atlantic Sturgeons use of muddy tidal flats. This summary provides updates of validated foraging grounds for Atlantic Sturgeon identified though this project.
 
-#### ***Area-specific Atlantic Sturgeon search results:***
+##### *Area-specific search results of Atlantic Sturgeon Foraging Areas in the Upper Bay of Fundy*
 ```{r sturg-results, include=FALSE, cache=FALSE}
 sturgOutputList <- master_intersect(sturg_rr$data_sf, mapDataList)
 
