--- a/reports/sections/conservationSites/conservationSites_en.Rmd
+++ b/reports/sections/conservationSites/conservationSites_en.Rmd
@@ -32,7 +32,7 @@ Marine Planning and Conservation at DFO has initiated a two-phased engagement pr
 
 It is important to note that Marine Conservation Network Plan will be aligned with a future Marine Spatial Plan for the Scotian Shelf-Bay of Fundy bioregion. The overall intent is to ensure an effective balance among ecological, socio-economic and cultural objectives in the use, management and conservation of our marine environment and spaces. DFO and its partners will be providing further information on the bioregional Marine Spatial Planning (MSP) process in the near future.
 
-#### ***Area-specific Draft Conservation Network Design search results***
+##### *Area-specific Draft Conservation Network Design search results*
 
 ```{r MPA-load-data, results='asis'}
 mpaCols <- c("dodgerblue3", "red", "darkorchid", "lawngreen",  "cyan3")
