Title updates, re-structuring human activities section to organize better the information and associated supplementary materials

--- a/app/templates/EN/threats/literature_review.Rmd
+++ b/app/templates/EN/threats/literature_review.Rmd
@@ -1,5 +1,6 @@
-## Miscellaneous
+## **LITERATURE REVIEW: THREATS & MITIGATION FOR SPECIES AT RISK**
 
-# Threats Literature Review
+Note this section is only relevant if the literature review section is rendered as part of the Reproducible Report.
+
 ```{r child = here::here("reports/sections/threats/ThreatMitigation.Rmd")}
 ```
