--- a/app/templates/EN/threats/aquatic_invasive.Rmd
+++ b/app/templates/EN/threats/aquatic_invasive.Rmd
@@ -1,1 +1,5 @@
-## Aquatic Invasive Species
+## **AQUATIC INVASIVE SPECIES**
+
+This section is under-construction.
+
+##### *Area-specific results under-construction*
