--- a/app/templates/EN/threats/cumulative.Rmd
+++ b/app/templates/EN/threats/cumulative.Rmd
@@ -1,4 +1,4 @@
-## Cumulative impact mapping 
+## **STRUCTURES, LOADING & DISPOSAL**
 
 ```{r child = here::here("reports/sections/nitroLoad/nitroLoad_en.rmd")}
 ```
@@ -13,32 +13,3 @@
 ```
 
 
-## Fishing
-
-```{r child = here::here("reports/sections/benthicEffort/benthicEffort_en.rmd")}
-```
-
-```{r child = here::here("reports/sections/lobsterEffort/lobsterEffort_en.rmd")}
-```
-
-
-## Threat Classification
-
-```{r threat-class-table}
-if (!is.null(rrEnv$haClassTable)) {
-  absentCode <- "&nbsp;-&nbsp;"
-  presentCode <- "&#x2714;"
-  rrEnv$haClassTable[is.na(rrEnv$haClassTable)] <- FALSE
-
-  rrEnv$haClassTable[rrEnv$haClassTable == FALSE] <- absentCode
-  rrEnv$haClassTable[rrEnv$haClassTable == TRUE] <- presentCode
-
-  haClassTable <-dplyr:: mutate_all(rrEnv$haClassTable, ~ kableExtra::cell_spec(., color = ifelse(. == presentCode, "white", ""), background = ifelse(. == presentCode, "green", ""), escape = FALSE))
-
-}
-```
-
-```{r output-threat-class-table, eval=exists('haClassTable')}
-knitr::kable(haClassTable, align="l", caption = "Classification of areas impacted by threats present in search area", booktabs = T, escape = F, linesep = "") %>%
-  kableExtra::kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
-```
