--- a/reports/sections/template/template_fr.rmd
+++ b/reports/sections/template/template_fr.rmd
@@ -36,7 +36,7 @@ write_meta(template_rr, "FR")
 SECTION TEXT ADDED HERE.
 
 
-#### ***Area-specific Template results***
+#### *Area-specific Template results*
 ```{r template-results, include=FALSE, cache=FALSE}
 # clip the data to the Study and Map areas:
 templateOutputList <- master_intersect(template_rr$data_sf, mapDataList)
