--- a/reports/sections/permits/permits_en.Rmd
+++ b/reports/sections/permits/permits_en.Rmd
@@ -6,12 +6,20 @@ output:
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
 
-```{r threats-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
+```{r permits-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
 ``` 
+
+```{r eval=FALSE}
+if (FALSE) { #load in data:
+  lapply(list.files(here::here("reports/R"), pattern = ".[Rr]$", full.names = TRUE), source)
+  studyArea <- sf::st_read(here::here("app/output/geoms_slc.geojson")) 
+  intro_setup(studyArea, env = environment())  
+}
+```
 
 ### SARA Section 73 Permits
 
-```{r threats-load, include=FALSE}
+```{r permits-load, include=FALSE}
 load_rdata(c("permits_rr"), regionStr, env = environment())
 ```
 
@@ -61,4 +69,35 @@ Please note the following caveats and disclaimers relevant to this section:
 * Protected information is not part of the data mining exercise CLARIFY
 * In the case that report records are inconclusive (species is unknown), they are omitted from the spreadsheet.
 
+#### ***Area-specific Permits search results***
 
+```{r permits-results, include=FALSE, cache=FALSE}
+outputList = master_intersect(permits_rr$data_sf, mapDataList, Year = minYear)
+
+permitTable = create_sar_tables(outputList$studyData, listed_species)$sarData
+summarySarTable = add_col_to_sar_summary(summarySarTable, "[OBIS](#OBIS-section)", permitTable, "Common Name", "Common Name")
+```
+
+
+```{r permits-check, echo=FALSE, results='asis',}
+Report_permit = if (is.null(outputList$studyData)) {
+  "* There are no relevant SARA Section 73 Permit records for this search area."
+} else {
+  "* There are relevant SARA Section 73 Permit records for this search area."
+}
+Report_permit = noquote(Report_permit)
+writeLines(Report_permit)
+```
+
+
+```{r permit-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(permits_rr, "EN"), 'Map of Ocean Biodiversity Information System (OBIS) observation records (black circles) of species observed within the search area (red outline) and listed by the Species at Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. Observations displayed outside of the search area are visualized for context, but not included in the survey results listed below. The absence of a species in this figure should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.')}
+if (!is.null(outputList$studyData)) {
+  plot_rr_sf(areaMap, outputList$mapData)
+}
+```
+
+```{r obis-table, echo=FALSE, results='asis'}
+if (!is.null(outputList$studyData)) {
+  knitr::kable(permitTable, align="l", caption=paste(write_caption_blurb(permits_rr, "EN"), "Ocean Biodiversity Information System (OBIS) observation records of species observed within the search area, and listed by the Species At Risk Act (SARA), and/or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Species designated as “Not at Risk” by SARA or COSEWIC are not included in this search. URLs contain links to a complete dataset description. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
