--- a/reports/sections/permits/permits_en.Rmd
+++ b/reports/sections/permits/permits_en.Rmd
@@ -35,7 +35,7 @@ The Species at Risk Act [-@SARA2002] contains several prohibitions to protect Sc
 
 SARA also contains provisions that prohibit the destruction of any part of the critical habitat of listed aquatic species (section 58(1)).
 
-However, there may be instances which allow permits to be issued for activities that affect Schedule 1 species or its critical habitat. Under subsection 73(2) of SARA, permits may be issued if the proposed activity applies to one or more of the following:
+However, there may be instances which allow permits to be issued for activities that affect Schedule 1 species or their critical habitat. Under subsection 73(2) of SARA, permits may be issued if the proposed activity applies to one or more of the following:
 
 * Scientific research relates to the conservation of the species and being conducted by qualified persons.
 * Benefits the species or required to enhance the species’ chance of survival in the wild.
@@ -47,7 +47,7 @@ As well, the competent Minister must be of the opinion that all 3 of the followi
 * All feasible measures will be taken to minimize the impact of the activity on the species or its critical habitat or the residences of its individuals.
 * The activity will not jeopardize the survival or recovery of the species.
 
-Sample activities for which permits may be issued include: obtaining biological samples from the organism for research purposes, electrofishing to evaluate species populations, rescue activities to release entangled species, creating bypasses and traps for species, and conducting surveys, transects, and/or photographing for research purposes. Construction or development projects near water (e.g., constructions of bridges, maintenance of harbours, etc.) may also require a SARA permit. However, this is an additional process and requires other forms of authorization (see more information here <https://www.dfo-mpo.gc.ca/pnw-ppe/index-eng.html>); therefore, data from these projects are therefore not included in this section. 
+Sample activities for which permits may be issued include obtaining biological samples from the organism for research purposes; electrofishing to evaluate species populations; rescue activities to release entangled species; creating bypasses and traps for species; and conducting surveys, transects, and/or photographing for research purposes.  
 
 In support of the expansion and integration of additional data sources, Species at Risk records from these DFO-issued Section 73 permits were mined and summarized in this section. Location and species information were extracted. Due to issues surrounding Protected information, more specific information such as permit number or the project description are not included, but can be obtained from the SARA contact listed above, if needed. 
 
@@ -59,20 +59,22 @@ Please note the following caveats and disclaimers relevant to this section:
 * Latitude and longitude formats differ between reports; therefore, all coordinates were converted to decimal degrees to promote consistency. 
 * In some instances, coordinate information was not included in the permits. Data from these instances were not included in this section. 
 * In the case that report records are inconclusive (species is unknown), they are omitted from the spreadsheet.
+* Construction or development projects near water (e.g., constructions of bridges, maintenance of harbours, etc.) may also require a SARA permit. However, this is an additional process and requires other forms of authorization (see more information here <https://www.dfo-mpo.gc.ca/pnw-ppe/index-eng.html>). Data from these projects are therefore not included in this section.
+* Each species may have distinct populations (referred to as Designatable Units, or DUs, under COSEWIC), and each population may have different COSEWIC and/or SARA statuses. However, the the populations may not be specified in the permits. Readers of this Report should use their best judgement to determine which population may be the most applicable based on their search area.  
 
 #### ***Area-specific SARA Section 73 permits search results***
 
 ```{r permits-results, include=FALSE, cache=FALSE}
 outputList = master_intersect(permits_rr$data_sf, mapDataList, getRegion = TRUE)
 
-permitTable = create_sar_tables(outputList$studyData, listed_species)$sarData
+permitTable = create_sar_tables(outputList$studyData, extraCols = NULL, listed_species)$sarData
 ```
 
 ```{r permits-check, echo=FALSE, results='asis',}
 Report_permit = if (is.null(outputList$studyData)) {
-  "* There are no relevant SARA Section 73 Permit records for this search area."
+  "* There are no relevant SARA Section 73 permit records for this search area."
 } else {
-  "* There are relevant SARA Section 73 Permit records for this search area."
+  "* There are relevant SARA Section 73 permit records for this search area."
 }
 Report_permit = noquote(Report_permit)
 writeLines(Report_permit)
@@ -86,6 +88,6 @@ if (!is.null(outputList$studyData)) {
 
 ```{r permit-table, echo=FALSE, results='asis'}
 if (!is.null(outputList$studyData)) {
-  knitr::kable(permitTable, align="l", caption=paste(write_caption_blurb(permits_rr, "EN"), "SARA Section 73 permit observation records of species observed within the search area. Permits are not created for species of special concern. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  knitr::kable(permitTable, align="l", caption=paste(write_caption_blurb(permits_rr, "EN"), "Species records obtained from the Species at Risk Act (SARA) Section 73 permits observed within the search area. Permits are not created for species of special concern. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area."), booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
