Added some basic plots to the RMD, but no preprocessing.

--- a/app/templates/EN/context/otn.Rmd
+++ b/app/templates/EN/context/otn.Rmd
@@ -2,3 +2,5 @@
 
 If you're seeing this, then this got bolted onto the report. O frabjous day, callooh callay.
 
+```{r child = here::here("reports/sections/otn_dets/OTN_output.Rmd")}
+```
